fixed alignement

--- a/style/overlay.css
+++ b/style/overlay.css
@@ -20,6 +20,7 @@
   color: black;
   width: 45%;
   text-align: justify;
+  white-space: pre-line;
   margin: 40px auto;
   background-image: url(../img/txtbg.png);
   -webkit-border-radius:12px;
